index.css
body {
  font-family: 'Space Grotesk', sans-serif;
  font-size: 18px;
}

#card-front {
  background-image: url('./images/bg-card-front.png');
  border-radius: 5%;
  padding: 12px 16px;
  background-repeat: no-repeat;
  color: azure;
  font-size: 10px;
  background-size: contain;
}

#card-front img {
  width: 20%;
}
#card-back {
  background-image: url('./images/bg-card-back.png');
  border-radius: 5%;
  background-repeat: no-repeat;
  color: azure;
  font-size: 10px;
  background-size: contain;
}

#user-info {
  position: absolute;
}

#name-expiry {
  display: flex;
  justify-content: space-between;
  margin-top: 8px;
}

#expire-date {
  display: flex;
  align-items: end;
}

#cardNum {
  margin-bottom: 8px;
}

.attribution {
  position: fixed;
  bottom: 0;
  font-size: 11px;
  text-align: center;
}

.attribution a {
  color: hsl(228, 45%, 44%);
}
@media only screen and (max-width: 375px) {

  body {
    background-image: url('./images/bg-main-mobile.png');
    background-repeat: no-repeat;
    overflow-x: hidden;
    width: auto;
    font-size: 12px;
  }
  .hide {
    display: none;
  }

  #card {
    position: relative;
    }

  #card-front {
    border-radius: 2%;
    position: absolute;
    top: 110px;
    left: 8px;
    height: 172px;
    width: 256px;
    z-index: 1;
  }

  #card-back {
    border-radius: 5%;
    position: absolute;
    height: 172px;
    width: 280px;
    left: 72px;
    top: 24px;
  }

  #card-cvc-display {
    position: absolute;
    top: 58px;
    left: 224px;
  }

  #user-info {
    position: fixed;
    top: 308px;
    width: auto;
    left: 24px;
  }

  #cardholder-name-input, #card-num-input {
    border-color: lightgray;
    border-radius: 10px;
    margin-bottom: 10px;
    padding: 10px;
    width: 93.5%;
    /* width: 100%; */
  }

  #date-cvc {
    display: flex;
    margin-bottom: 24px;
  }

  #month-year {
    display: flex;
    width: 25%;
    margin-right: 0;
  }

  #expire-date-month {
    width: 40px;
    border-color: lightgray;
    border-radius: 10px;
    margin-right: 8px;
    padding: 10px;
  }

  #expire-date-year {
    width: 40px;
    border-color: lightgray;
    border-radius: 10px;
    margin-right: 8px;
    padding: 10px;
  }

  #card-cvc-input {
    width: auto;
    border-color: lightgray;
    border-radius: 10px;
    margin-left: 0;
    padding: 10px;
  }

  #submit {
    background-color: hsl(278, 68%, 11%);
    color: azure;
    border: none;
    border-radius: 6px;
    width: 100%;
    padding: 24px 0;
    font-size: 16px;
  }

/* ------------------------THANK YOU - MOBILE------------------------ */

  #thank-you {
    position: fixed;
    top: 316px;
    right: 24px;
    left: 24px;
  }

  #thankyounotice {
    text-align: center;
  }

  #thankyoutext {
    font-size: 32px;
    color: hsl(278, 68%, 11%);
    margin-bottom: 24px;
  }

  #carddetails {
    color: darkgray;
    font-size: 18px;
    font-weight: bold;
  }

  #checkmark {
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 32px;
    width: 25%;
  }

  #continue {
    background-color: hsl(278, 68%, 11%);
    color: azure;
    border: none;
    border-radius: 6px;
    width: 100%;
    padding: 24px 0;
    font-size: 16px;
    margin-top: 32px;
    margin-right: 24px;
  }

}

